[package]
name = "abctest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "abga"
path = "abg/maina.rs"

[[bin]]
name = "iron2"
path = "iron_rule/2.rs"

[[bin]]
name = "iron3"
path = "iron_rule/3.rs"

[[bin]]
name = "iron4"
path = "iron_rule/4.rs"

[[bin]]
name = "iron3a"
path = "iron_rule/3a.rs"

[dependencies]
proconio = "0.4.5"
